<resources>
    <string name="app_name">MyApp</string>
    <string name="barra_de_rolagem">Barra de rolagem</string>
    <string name="add">Add</string>
    <string name="menu_de_navega_o_inferior">Menu de navegação inferior</string>
    <string name="editar">editar</string>
    <string name="framelayout">FrameLayout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="go">Go</string>
    <string name="saved">Saved</string>
    <string name="contribute">Contribute</string>
    <string name="updates">Updates</string>
    <string name="home">Home</string>
    <string name="people">People</string>
    <string name="chat">Chat</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="go_page">GO</string>
    <string name="searchbar_scrolling_view_behavior"></string>
    <string name="barra_de_busca">Barra de busca</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="header_text">Header Text</string>
    <string name="header_title">Header Title</string>
    <string name="menunav">MenuNav</string>
</resources>