<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mCreateUp"
        android:icon="@drawable/baseline_create"
        android:title="@string/create"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mSaveUp"
        android:icon="@drawable/baseline_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mUpdateUp"
        android:icon="@drawable/baseline_update"
        android:title="@string/update"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mDeleteUp"
        android:icon="@drawable/baseline_delete_up"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />


</menu>