<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContributeFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutContribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbItemHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_home"
            android:text="@string/home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbItemPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_people"
            android:text="@string/people" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tbItemChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_chat"
            android:text="@string/chat" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerContribute"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayoutContribute" />


</RelativeLayout>