<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationBarActivity">

    <FrameLayout
        android:id="@+id/containerBottomNavView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:background="#FF5722"
        android:contentDescription="@string/framelayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/idFABNavView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/editar"
        android:src="@drawable/baseline_edit"
        app:layout_anchor="@id/bottom_navigation" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/menu_de_navega_o_inferior"
        app:itemActiveIndicatorStyle="@color/cardview_dark_background"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu_navigation_view" />

</RelativeLayout>